CHANGES IN VERSION 0.99.15
--------------------------
 o updated ref in package man (2) <2012-09-14 Fri>

CHANGES IN VERSION 0.99.14
--------------------------
 o updated ref in package man <2012-09-11 Tue>

CHANGES IN VERSION 0.99.13
--------------------------
 o bumping version number to take all previous changes 
   into account <2012-08-29 Wed>

CHANGES IN VERSION 0.99.12
--------------------------
 o fixed build problem on windows <2012-08-27 Mon>
 o updated refs in vignette <2012-08-28 Tue>

CHANGES IN VERSION 0.99.11
--------------------------
 o using dev='pdf' in vignette and removing 
   tikzDevice (not on CRAN anymore) from 
   Suggests<2012-08-16 Thu>

CHANGES IN VERSION 0.99.10
--------------------------
 o added tikzDevice suggestion for vignette <2012-08-15 Wed>

CHANGES IN VERSION 0.99.9
-------------------------
 o using knitr instead of pgfSweave <2012-08-13 Mon>
 o new verbose arg to loadIdentOnly taken into account 
   by estimateMasterFdr and makeMaster <2012-08-13 Mon>

CHANGES IN VERSION 0.99.8
-------------------------
 o vignette update with summary table <2012-07-17 Tue>
 o vignette update with additional PLGS slides <2012-07-17 Tue>

CHANGES IN VERSION 0.99.7
-------------------------
 o updated vignette <2012-07-12 Thu>
 o removed README.org file <2012-07-12 Thu>
 o added github page in DESCRIPTION <2012-07-12 Thu>

CHANGES IN VERSION 0.99.6
-------------------------
 o Masterpeptides has new fdr and method slots  <2012-07-10 Tue> 
 o added method arg to makeMaster <2012-07-10 Tue>
 o fixed non-match precuror.leIDs when using master <2012-07-11 Wed>

CHANGES IN VERSION 0.99.5
-------------------------
 o removed 'precursor.Mobility' columns from light 
   merged and matched csv output, as these are not 
   available when a MSe master is used <2012-07-09 Mon>

CHANGES IN VERSION 0.99.4
-------------------------
 o use log2 for t.test <2012-07-05 Thu>
 o updates to vignette <2012-07-06 Fri>

CHANGES IN VERSION 0.99.3